# EnvoyClient

./: .dockerignore  .gitignore  .gitmodules  AGENT_REPORT.md  CLAUDE.md  OPTIMIZATIONS.md  README.md  REFACTOR_PLAN.md  REVIEW.md  build-dmg.sh  build-installer.ps1  collect-payload.ps1  index.html  notepad.txt  package-lock.json  package.json  pnpm-lock.yaml  pull-all.bat  pull-all.sh  push-all.bat  push-all.sh  screenshot.md  shutdown.bat  skills-lock.json  task 机制.md  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/commands/: be-review.md  be.md  code-review.md  fe-review.md  fe.md
ai-layer/: package-lock.json  package.json  tsconfig.json
ai-layer/src/: index.ts
assets/: a (4).html
docs/: ai-architecture.md  flowcharts.md  ui-audit-report.md  website-design-system.md
docs/optimization/: README.md
installer/: .gitignore  index.html  package.json  vite.config.ts
installer/src/: App.vue  router.ts
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: lib.rs  main.rs
installer/src-tauri/src/commands/: extract.rs  mod.rs  path.rs  registry.rs  shortcuts.rs
manager/server/: index.ts  package-lock.json  package.json  settings.ts  team-registry.ts  user-registry.ts
resources/: 样式优化文档。.md  项目技术方案文档.md
scripts/: team-server.ts  test-reflection-memory.ts
src/: App.vue  api.ts  main.ts  router.ts  types.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src/i18n/: en.json  (+2 more)
website/: nuxt.config.ts  package-lock.json  package.json
(+660 files in other folders)
