[package]
name = "envoy-installer"
version = "0.1.0"
edition = "2021"

[lib]
name = "envoy_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
include_dir = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

